updated font to IBM, updated contact section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&family=PT+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -20,8 +22,8 @@
     <section id="mainBody">
         <!-- Navbar -->
         <header class="container containerSet">
-            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #e7e6e1;">
-                <h1 class="navbar-brand" href="#">Lillie's Portfolio</h1>
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #ffc4d0;">
+                <h1 class="navbar-brand" href="#"></h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,12 +34,14 @@
                                 class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#portfolio">PORTFOLIO</a>
                         <a class="nav-item nav-link" href="#contact">CONTACT</a>
-                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/1AWfbw2MH4dU4QamiFJ2crN93kFrmaL0D/view?usp=sharing">RESUME</a>
+                        <a class="nav-item nav-link"
+                            href="https://drive.google.com/file/d/1AWfbw2MH4dU4QamiFJ2crN93kFrmaL0D/view?usp=sharing"
+                            target="_blank">RESUME</a>
                     </div>
                 </div>
             </nav>
 
-            <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff;">
+            <div class="jumbotron jumbotron-fluid" style="background-color: #fcf5ee;">
                 <div class="container">
                     <div class="row align-items-end">
                         <div class="col-12 col-md-6">
@@ -55,7 +59,7 @@
 
         </header>
         <!-- Container (About me Section) -->
-        <div class="card containerSet row col-sm-6" style="background-color:#f7f6e7;">
+        <div class="card containerSet row col-sm-6" style="background-color:#f7ddde;">
             <div class="card-body">
                 <h2 class="card-title" style="text-align: center;">{ About Lillie }</h2>
                 <p class="card-text">My name is Lillie and I am a student at UCLA Extension’s Full Stack Development
@@ -71,7 +75,6 @@
                     eager to learn more.</p>
                 <p class="card-text">When I am not studying or working, you can find me at the beach or, at the
                     mountain, or in the kitchen trying out new cooking recipes.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
             <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
         </div>
@@ -86,28 +89,28 @@
             <div class="row text-center">
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Weather Dashboard </p>
+                    <h5>Weather Dashboard </h5>
                     <a href="https://lilliemefie.github.io/WeatherDashboard/">
                         <img class='img-fluid' src="./assets/AskmeWeather resize.png" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>FoodSter</p>
+                    <h5>FoodSter</h5>
                     <a href="https://chrischo94.github.io/TinderForFood/">
                         <img class='img-fluid' src="./assets/FoodSter Project1.jpg" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Password Generator</p>
+                    <h5>Password Generator</h5>
                     <a href="https://lilliemefie.github.io/password-generator/">
                         <img class='img-fluid' src="./assets/password generator.gif" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <p>Coming sooon!</p>
+                    <h5>Coming sooon!</h5>
                     <a href="#portfolio">
                         <img class='img-fluid' src="./assets/web-design-concept-with-drawings_1134-77.jpeg"
                             alt="Image-fluid">
@@ -118,29 +121,34 @@
         <br>
         <br>
         <!-- Contact section -->
-        <div class="card containerSet row col-sm-6 text-center" style="background-color:#f7f6e7;">
+        <div class="card containerSet row col-sm-6 text-center" style="background-color:#fbe8e7;">
             <div class="card-body">
                 <h2 class="card-title" style="text-align: center;" id="contact"> Contact </h2>
                 <p><i class="fas fa-map-marker-alt"></i> Los Angeles, US</p>
                 <div class="col-12 text-center">
-                    <a href="mailto:lilliejira@gmail.com" target="_blank" style="color:black">
-                        <i class="fas fa-envelope" id="email" style="font-size:40px"></i>
+                    <a href="mailto:lilliejira@gmail.com" target="_blank" style="color:#24a19c">
+                        <i class="fas fa-envelope" id="email" style="font-size:30px"></i>
+                        <span>lilliejira@gmail.com</span>
                     </a>
-                    <a href="tel:424.421.9924" style="color:black">
-                        <i class="fas fa-phone-square-alt" id="phone" style="font-size:40px" aria-hidden="true"></i>
+                    <a href="tel:424.421.9924" style="color:#ff79cd">
+                        <i class="fas fa-phone-square-alt" id="phone" style="font-size:30px" aria-hidden="true"></i>
+                        <span>Call me</span>
                     </a>
-                    <a href="https://github.com/Lilliemefie" target="_blank" style="color:black">
-                        <i class="fab fa-github" id="github" style="font-size:40px"></i>
+                    <a href="https://github.com/Lilliemefie" target="_blank" style="color:#aa2ee6">
+                        <i class="fab fa-github" id="github" style="font-size:30px"></i>
+                        <span>Github</span>
                     </a>
                     <a href="https://www.linkedin.com/in/lillie-jirapattanalak" target="_blank" style="color:#2867B2">
-                        <i class="fab fa-linkedin" id="linkedin" style="font-size:40px"></i>
+                        <i class="fab fa-linkedin" id="linkedin" style="font-size:30px"></i>
+                        <span>Linkedin</span>
                     </a>
                     <a href="https://www.instagram.com/lillie_paey/" target="_blank" style="color:white">
-                        <i class="fab fa-instagram" id="instagram" style="font-size:37px"></i>
+                        <i class="fab fa-instagram" id="instagram" style="font-size:27px"></i>
+                        <span style="color:#ff5200">Instagram</span>
                     </a>
                 </div>
             </div>
-            
+
             <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
         </div>
     </section>
