updated jumbotron - tex center

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <div class="col-12 col-md-6">
                             <img class='img-fluid' src="./assets/lillie-la.JPG" alt="webdeveloper" />
                         </div>
-                        <div class="col-12 col-md-6 align-items-center">
+                        <br>
+                        <div class="col-12 col-md-6 text-center" style="padding-top: 30px;">
                             <h1 id="aboutMe">Lillie Jirapattanalak</h1>
                             <p class="lead">['Detail Oriented', 'Active Learning', 'Problem Solving', 'Collaboration ']
                             </p>
