added project 2 img, added github's link for each img

--- a/index.html
+++ b/index.html
@@ -90,31 +90,35 @@
             <div class="row text-center">
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <h5>Weather Dashboard </h5>
+                    <h4>Weather Dashboard </h4>
+                    <h5><a href="https://github.com/Lilliemefie/WeatherDashboard">GITHUB</a> | <a href="https://lilliemefie.github.io/WeatherDashboard/">DEPLOYED SITE</a> </h5>
                     <a href="https://lilliemefie.github.io/WeatherDashboard/">
                         <img class='img-fluid' src="./assets/AskmeWeather resize.png" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <h5>FoodSter</h5>
+                    <h4>FoodSter</h4>
+                    <h5><a href="https://github.com/chrischo94/TinderForFood">GITHUB</a> | <a href="https://chrischo94.github.io/TinderForFood/">DEPLOYED SITE</a> </h5>
                     <a href="https://chrischo94.github.io/TinderForFood/">
                         <img class='img-fluid' src="./assets/FoodSter Project1.jpg" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <h5>Password Generator</h5>
+                    <h4>Password Generator</h4>
+                    <h5><a href="https://github.com/Lilliemefie/password-generator">GITHUB</a> | <a href="https://lilliemefie.github.io/password-generator">DEPLOYED SITE</a> </h5>
                     <a href="https://lilliemefie.github.io/password-generator/">
                         <img class='img-fluid' src="./assets/password generator.gif" alt="Image">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 photo">
                     <br><br>
-                    <h5>Coming sooon!</h5>
-                    <a href="#portfolio">
-                        <img class='img-fluid' src="./assets/web-design-concept-with-drawings_1134-77.jpeg"
-                            alt="Image-fluid">
+                    <h4>Wiki Hive</h4>
+                    <h5><a href="https://github.com/Lilliemefie/WikisHub">GITHUB</a> | <a href="https://remembrance-lumberjack-47538.herokuapp.com">DEPLOYED SITE</a> </h5>
+                    <a href="https://remembrance-lumberjack-47538.herokuapp.com/">
+                        <img class='img-fluid' src="./assets/project2greatpic.gif"
+                            alt="Image">
                     </a>
                 </div>
             </div>
