--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
 
         <br>
         <br>
+
+        <!-- Container (Skills Section) -->
+        <div class="card containerSet row col-sm-6" style="background-color:#ffc4d0;">
+            <div class="card-body">
+                <h2 class="card-title" style="text-align: center;">[ Skills ]</h2>
+                <p class="card-text" style="text-align: center;">HTML | CSS | JavaScript | jQuery  | Node.JS | APIs | MySQL/Sequelize | Express | Git </p>    
+            </div>
+            <!-- <img class="card-img-bottom" src="..." alt="Card image cap"> -->
+        </div>
+
+        <br>
+        <br>
         <!-- Container (Portfolio Section) -->
         <div class="container-fluid col-12 col-md-8 text-center">
             <h2 id="portfolio">Portfolio</h2>
